Fix contrast on comments

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ code {
     color: #183691;
   }
   .highlight-8 {
-    color: #969896;
     font-style: italic;
   }
 }
